# DiffusionUnique

./: pyproject.toml
DiffusionUnique/: __init__.py
DiffusionUnique/diffusion2D/: __init__.py  model.py
DiffusionUnique/tests/: test_init_model.py  test_stable_model.py
example/: run_diffusion.py
